# todo

./: README.md  main.py  pyproject.toml
prompts/: setup.txt
